--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ header img{
 }
 
 
-
 #obsah{
     width:100%;
     background-color:grey;
@@ -41,6 +40,7 @@ footer{
 footer a{
   text-decoration: none;
   color: white;
+  
 }
 
 footer img{
@@ -49,6 +49,7 @@ footer img{
 }
 
 *{
+    scroll-behavior: smooth;
     margin: auto;
 }
 #wrapper{
