--- a/style.css
+++ b/style.css
@@ -10,13 +10,12 @@ header img {
   float: right;
 }
 
-#obsah{
-    width:100%;
-    background-color:rgb(209, 209, 209);
-    min-height: 700px;
-    height: max-content;   
+#obsah {
+  width: 100%;
+  background-color: rgb(209, 209, 209);
+  min-height: 700px;
+  height: max-content;
 }
-
 
 body {
   background-color: white;
@@ -107,36 +106,44 @@ ul li img {
 
 .clenovia {
   overflow: hidden;
-background-color: #898989;	
+  background-color: #898989;
   padding-bottom: 20px;
   padding-top: 20px;
   margin: 0 0 15px 0;
-  
 }
 
 .clenovia img {
-  width: 150px;	
+  width: 150px;
   margin: 0 50px 0 50px;
   float: left;
   border-radius: 50%;
 }
 
 .clenovia h2 {
-margin: 0 0 0 0;
-font-family: 'Courier New', Courier, monospace;
-color: black;
-font-size: 30px;
+  margin: 0 0 0 0;
+  font-family: "Courier New", Courier, monospace;
+  color: black;
+  font-size: 30px;
 }
 
 .clenovia h3 {
-margin: 2px 0 12px 0;
-font-family: 'Courier New', Courier, monospace;
-font-size: 20px;
-color: #071013;
+  margin: 2px 0 12px 0;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 20px;
+  color: #071013;
 }
 
-.clenovia p {	
-font-family: 'Century Gothic', sans-serif;
-color: black;
-font-size: 18px;
+.clenovia p {
+  font-family: "Century Gothic", sans-serif;
+  color: black;
+  font-size: 18px;
+}
+
+h1 {
+  font-size: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
