--- a/style.css
+++ b/style.css
@@ -147,3 +147,37 @@ a {
   text-decoration: none;
   color: black;
 }
+
+#produkt{
+  padding: 0 25px 0 0 ;
+  font-family: 'Century Gothic', sans-serif;
+  color: black;
+  font-size: 18px;
+}
+
+#produkt img{
+  float: left;
+  width: 400px;  
+  margin: 30px 20px 0px 25px;
+}
+
+#produkt h1 { 
+  padding: 30px 0 20px  0;
+  font-family: 'Courier New', Courier, monospace;
+  color: black;
+  font-size: 30px;
+  font-weight: bolder;
+}
+
+#produkt span{
+  border-style: solid;
+  border-width: 5px; 
+  padding: 5px 5px 5px 5px;
+  border-radius: 5px;
+  border-top-color: black;
+  border-bottom-color: black;
+  border-left-color: black;
+  border-right-color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
