--- a/style.css
+++ b/style.css
@@ -1,142 +1,113 @@
-header {
-  background-color: #333;
-  width: 100%;
-  height: max-content;
-  text-align: center;
+header{
+    background-color:#333;
+    width:100%;
+    height: max-content;
+    text-align: center;  
+}
+ 
+header img{
+    width: 180px;
+    float: right;
+    
 }
 
-header img {
-  width: 180px;
-  float: right;
+
+
+#obsah{
+    width:100%;
+    background-color:#379683;
+    min-height: 700px;
+    height: max-content;
+    
 }
 
-#obsah {
-  width: 100%;
-  background-color: rgb(209, 209, 209);
-  min-height: 700px;
-  height: max-content;
+body{
+   background-color: blue;
+   margin: auto;
+   background-image: url(obr/pozadie.jfif) ; 
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: center;
+  
+  
 }
 
-body {
-  background-color: white;
-  margin: auto;
+
+footer{
+    margin-top: 50px;
+    width:960px;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
+    background-color:black; 
+    color: white;  
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+}
+
+footer a{
   text-decoration: none;
-}
-
-footer {
-  width: 960px;
-  height: 50px;
-  position: fixed;
-  bottom: 0;
-  background-color: black;
   color: white;
-  display: flex;
-  text-align: center;
-  justify-content: space-between;
+  
 }
 
-footer a {
-  text-decoration: none;
-  color: white;
-}
-
-footer img {
+footer img{
   width: 30px;
   height: 30px;
 }
 
-* {
-  scroll-behavior: smooth;
-  margin: auto;
-  text-decoration: none;
+*{
+    scroll-behavior: smooth;
+    margin: auto;
+    font-family: 'Century Gothic', sans-serif;
+    
 }
-#wrapper {
-  width: 960px;
-  margin: 0 auto;
-}
-
-nav {
-  padding-top: 15px;
-  overflow: hidden;
-  background-color: #333;
+#wrapper{
+    width:960px;
+    margin:0 auto;
 }
 
+nav{
+    padding-top: 15px;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
 nav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
 nav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
+    background-color: #065A82;
+    color: black;
+  }
+  
 nav a.active {
-  background-color: grey;
-  color: black;
-}
+    background-color: #379683;
+    color: black;
+    
+  }
 
 .container {
-  display: flex;
-  flex-wrap: wrap;
+     display: flex;
+     flex-wrap: wrap;
 }
 
 ul {
-  list-style-type: none;
-  text-align: center;
+    list-style-type: none;
+    text-align: center;
 }
 
 li {
-  background: white;
-  padding: 0.3em;
-  margin: 0.3em;
-}
-
-h1 {
-  font-size: 1em;
-}
-
-ul li img {
-  margin: 10px;
-}
-
-.clenovia {
-  overflow: hidden;
-  background-color: #898989;
-  padding-bottom: 20px;
-  padding-top: 20px;
-  margin: 0 0 15px 0;
-}
-
-.clenovia img {
-  width: 150px;
-  margin: 0 50px 0 50px;
-  float: left;
-  border-radius: 50%;
-}
-
-.clenovia h2 {
-  margin: 0 0 0 0;
-  font-family: "Courier New", Courier, monospace;
-  color: black;
-  font-size: 30px;
-}
-
-.clenovia h3 {
-  margin: 2px 0 12px 0;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 20px;
-  color: #071013;
-}
-
-.clenovia p {
-  font-family: "Century Gothic", sans-serif;
-  color: black;
-  font-size: 18px;
+    background: white;
+    padding: 0.3em;
+    margin: 0.3em;
 }
 
 h1 {
@@ -146,6 +117,42 @@ h1 {
 a {
   text-decoration: none;
   color: black;
+}
+
+.clenovia {
+  overflow: hidden;
+background-color: #065A82;	
+  padding-bottom: 20px;
+  padding-top: 20px;
+  margin: 0 0 15px 0;
+  
+}
+
+.clenovia img {
+  width: 150px;	
+  margin: 0 50px 0 50px;
+  float: left;
+  border-radius: 50%;
+}
+
+.clenovia h2 {
+margin: 0 0 0 0;
+font-family: 'Courier New', Courier, monospace;
+color: black;
+font-size: 30px;
+}
+
+.clenovia h3 {
+margin: 2px 0 12px 0;
+font-family: 'Courier New', Courier, monospace;
+font-size: 20px;
+color: #071013;
+}
+
+.clenovia p {	
+font-family: 'Century Gothic', sans-serif;
+color: black;
+font-size: 18px;
 }
 
 #produkt{
@@ -174,10 +181,27 @@ a {
   border-width: 5px; 
   padding: 5px 5px 5px 5px;
   border-radius: 5px;
-  border-top-color: black;
-  border-bottom-color: black;
-  border-left-color: black;
-  border-right-color: black;
+  border-color: #065A82;
   font-size: 20px;
   font-weight: bold;
+}
+
+iframe{
+  margin:50px 0px 50px 200px;
+}
+
+#onas h1{
+  background-color: #065A82;
+  padding: 3px 0 3px 25px;
+  margin: 0 0 10px 0 ;
+  
+}
+
+#onas p{
+  margin: 0 25px 0 40px
+}
+
+#onas img{
+  margin:20px 0px 20px 200px;
+  width: 560px
 }
