--- a/style.css
+++ b/style.css
@@ -1,138 +1,170 @@
 header{
-    background-color:#333;
-    width:100%;
-    height: max-content;
-    text-align: center;  
+  background-color:#333;
+  width:100%;
+  height: max-content;
+  text-align: center;  
 }
- 
+
 header img{
-    width: 180px;
-    float: right;
-    
+  width: 180px;
+  float: right;
 }
-
-
 
 #obsah{
-    width:100%;
-    background-color:#379683;
-    min-height: 700px;
-    height: max-content;
-    
+  width:100%;
+  background-color:white;
+  min-height: 700px;
+  height: max-content;   
+  padding: 0 0 20px 0;
+}
+
+#obsah iframe{
+  width: 400px;
+  height: 200px;
+  margin: 0 0 0 280px;
+}
+
+#obsah h1{
+  padding: 20px 0 3px 25px;
+  margin: 0 0 20px 0 ;
+}
+
+#news h2{
+  background-color: #379683;
+  padding: 3px 0 3px 25px;
+  margin: 20px 0 20px 0 ;
+  font-size: 17px;
+}
+
+#news p{
+  margin: 0 20px 20px 40px;
+}
+
+#news a{
+  color: #379683;
+}
+
+#news a:hover{
+  background-color:#379683 ;
+  color: white;
+}
+
+#news img{
+  width: 400px;
+  height: 300px;
+  margin: 0 0 0 280px;
 }
 
 body{
-   background-color: blue;
-   margin: auto;
-   background-image: url(obr/pozadie.jfif) ; 
-   background-repeat: no-repeat;
-   background-size: cover;
-   background-position: center;
-  
-  
+ background-color: blue;
+ margin: auto;
+ background-image: url(obr/pozadie.jfif) ; 
+ background-repeat: no-repeat;
+ background-size: cover;
+ background-position: center;
 }
 
 
 footer{
-    margin-top: 50px;
-    width:960px;
-    height: 50px;
-    position: fixed;
-    bottom: 0;
-    background-color:black; 
-    color: white;  
-    display: flex;
-    text-align: center;
-    justify-content: space-between;
+  
+  width:960px;
+  height: 50px;
+  position: fixed;
+  bottom: 0;
+  background-color:black; 
+  color: white;  
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
 }
 
 footer a{
-  text-decoration: none;
-  color: white;
-  
+text-decoration: none;
+color: white;
+
 }
 
 footer img{
-  width: 30px;
-  height: 30px;
+width: 30px;
+height: 30px;
 }
 
 *{
-    scroll-behavior: smooth;
-    margin: auto;
-    font-family: 'Century Gothic', sans-serif;
-    
+  scroll-behavior: smooth;
+  margin: auto;
+  font-family: 'Century Gothic', sans-serif;
+  
 }
 #wrapper{
-    width:960px;
-    margin:0 auto;
+  width:960px;
+  margin:0 auto;
 }
 
 nav{
-    padding-top: 15px;
-    overflow: hidden;
-    background-color: #333;
-  }
-  
+  padding-top: 15px;
+  overflow: hidden;
+  background-color: #333;
+}
+
 nav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
 nav a:hover {
-    background-color: #065A82;
-    color: black;
-  }
-  
+  background-color:#379683 ;
+  color: #333;
+}
+
 nav a.active {
-    background-color: #379683;
-    color: black;
-    
-  }
+  background-color: white;
+  color: black;
+  
+}
 
 .container {
-     display: flex;
-     flex-wrap: wrap;
+   display: flex;
+   flex-wrap: wrap;
 }
 
 ul {
-    list-style-type: none;
-    text-align: center;
+  list-style-type: none;
+  text-align: center;
 }
 
 li {
-    background: white;
-    padding: 0.3em;
-    margin: 0.3em;
+  background: white;
+  padding: 0.3em;
+  margin: 0.3em;
 }
 
 h1 {
-  font-size: 20px;
+font-size: 20px;
 }
 
 a {
-  text-decoration: none;
-  color: black;
+text-decoration: none;
+color: black;
 }
 
 .clenovia {
-  overflow: hidden;
-background-color: #065A82;	
-  padding-bottom: 20px;
-  padding-top: 20px;
-  margin: 0 0 15px 0;
-  
+overflow: hidden;
+background-color: #379683;	
+padding-bottom: 20px;
+padding-top: 20px;
+margin: 0 0 20px 0;
+
 }
 
 .clenovia img {
-  width: 150px;	
-  margin: 0 50px 0 50px;
-  float: left;
-  border-radius: 50%;
+width: 150px;	
+margin: 0 50px 0 50px;
+float: left;
+border-radius: 50%;
 }
 
 .clenovia h2 {
@@ -156,52 +188,85 @@ font-size: 18px;
 }
 
 #produkt{
-  padding: 0 25px 0 0 ;
-  font-family: 'Century Gothic', sans-serif;
-  color: black;
-  font-size: 18px;
+padding: 0 25px 0 0 ;
+font-family: 'Century Gothic', sans-serif;
+color: black;
+font-size: 18px;
 }
 
 #produkt img{
-  float: left;
-  width: 400px;  
-  margin: 30px 20px 0px 25px;
+float: left;
+width: 400px;  
+margin: 30px 20px 0px 25px;
 }
 
-#produkt h1 { 
-  padding: 30px 0 20px  0;
-  font-family: 'Courier New', Courier, monospace;
-  color: black;
-  font-size: 30px;
-  font-weight: bolder;
+#produkt h1{ 
+padding: 30px 0 20px  0;
+font-family: 'Courier New', Courier, monospace;
+color: black;
+font-size: 30px;
+font-weight: bolder;
 }
 
 #produkt span{
-  border-style: solid;
-  border-width: 5px; 
-  padding: 5px 5px 5px 5px;
-  border-radius: 5px;
-  border-color: #065A82;
-  font-size: 20px;
-  font-weight: bold;
+border-style: solid;
+border-width: 5px; 
+padding: 5px 5px 5px 5px;
+border-radius: 5px;
+border-color: #379683;
+font-size: 20px;
+font-weight: bold;
+}
+
+#item1{
+  border:#379683 0.5px solid;
+}
+
+#item1:hover{
+  background-color: #379683;
+}
+
+#item2{
+  border:#379683 0.5px solid;
+}
+
+#item2:hover{
+  background-color: #379683;
+}
+
+#item3{
+  border:#379683 0.5px solid;
+}
+
+#item3:hover{
+  background-color: #379683;
+}
+
+#item4{
+  border:#379683 0.5px solid;
+}
+
+#item4:hover{
+  background-color: #379683;
 }
 
 iframe{
-  margin:50px 0px 50px 200px;
+margin:50px 0px 50px 200px;
 }
 
 #onas h1{
-  background-color: #065A82;
-  padding: 3px 0 3px 25px;
-  margin: 0 0 10px 0 ;
-  
+background-color: #379683;
+padding: 3px 0 3px 25px;
+margin: 0 0 10px 0 ;
+
 }
 
 #onas p{
-  margin: 0 25px 0 40px
+margin: 0 25px 0 40px;
+padding-bottom: 40px;
 }
 
 #onas img{
-  margin:20px 0px 20px 200px;
-  width: 560px
+margin:20px 0px 20px 200px;
+width: 560px
 }
